fix: use visualViewport for iOS Safari, dynamic gap capping, smaller mobile icons

--- a/src/components/icons/colbot-bubble.module.scss
+++ b/src/components/icons/colbot-bubble.module.scss
@@ -10,7 +10,7 @@
   transform: scaleX(-1);
 
   @include mobile {
-    width: 160px;
+    width: 130px;
   }
 }
 
