--- a/src/components/icons/contact-envelope.module.scss
+++ b/src/components/icons/contact-envelope.module.scss
@@ -9,7 +9,7 @@
   width: 220px;
 
   @include mobile {
-    width: 180px;
+    width: 150px;
   }
 }
 
