--- a/src/components/icons/name-card.module.scss
+++ b/src/components/icons/name-card.module.scss
@@ -9,7 +9,7 @@
   width: 260px;
 
   @include mobile {
-    width: 210px;
+    width: 175px;
   }
 }
 
