--- a/src/components/icons/resume-document.module.scss
+++ b/src/components/icons/resume-document.module.scss
@@ -9,7 +9,7 @@
   width: 140px;
 
   @include mobile {
-    width: 110px;
+    width: 95px;
   }
 }
 
